# finance-playground

./: .gitignore  01_downloading_data.ipynb  README.md  pyproject.toml
data/: gspc.csv  portfolio_data_close.csv  portfolio_info.csv
notebooks/: 01_downloading_data.ipynb  02_etf_portfolio_simulation.ipynb  03_rebounds.ipynb  aida_homework1_etl.ipynb
